<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_restaurant"
            android:icon="@drawable/ic_baseline_restaurant_24"
            android:title="@string/menu_restaurant" />

        <item
            android:id="@+id/nav_bebidas"
            android:icon="@drawable/ic_baseline_local_drink_24"
            android:title="@string/menu_bebidas" />

        <item
            android:id="@+id/nav_mercados"
            android:icon="@drawable/ic_baseline_local_mall_24"
            android:title="@string/menu_mercados" />

        <item
            android:id="@+id/nav_transporte"
            android:icon="@drawable/ic_baseline_motorcycle_24"
            android:title="@string/menu_transporte" />

        <item
            android:id="@+id/nav_favor"
            android:icon="@drawable/ic_baseline_emoji_people_24"
            android:title="@string/menu_favor" />

        <item
            android:id="@+id/nav_farmacia"
            android:icon="@drawable/ic_baseline_local_pharmacy_24"
            android:title="@string/menu_farmacia" />

        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_restaurant_menu_black_24dp"
            android:title="@string/menu_category" />

        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/menu_cart" />

        <item
            android:id="@+id/nav_update_info"
            android:icon="@drawable/ic_update_black_24dp"
            android:title="@string/menu_view_perfil" />

        <item
            android:id="@+id/nav_view_order"
            android:icon="@drawable/ic_view_day_black_24dp"
            android:title="@string/menu_view_orders" />

        <item
            android:id="@+id/nav_loguot"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/menu_logout" />
    </group>

    <item android:title="Social">
        <menu>

            <item
                android:id="@+id/nav_shared"
                android:icon="@drawable/ic_share_black_24dp"
                android:title="@string/menu_share" />

            <item
                android:id="@+id/nav_llamar"
                android:icon="@drawable/ic_baseline_phone_in_talk_24"
                android:title="@string/menu_call" />
        </menu>


    </item>

</menu>
